# ferret

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  entropy.rs  lib.rs  main.rs
src/parsers/: bruno.rs  insomnia.rs  mod.rs  postman.rs
src/reporter/: html.rs  json.rs  mod.rs  terminal.rs
src/scanner/: mod.rs  owasp.rs  rules.rs  secrets.rs
tests/: parser_tests.rs  scanner_tests.rs
