[package]
name = "ferret"
version = "0.1.0"
edition = "2021"
description = "Ferret out secrets and vulnerabilities in your API collections"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
colored = "2"

[dev-dependencies]
tempfile = "3"
